--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,15 +6,125 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }} - Greenville United Football Club</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
   {% block css %}{% endblock %}
 </head>
 <body>
   <header>
-    <!-- Navigation -->
+    <div class="conatiner-fluid">
+      <nav class="navbar navbar-expand-lg" style="background-color: var(--gufc-yellow)">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{{ url_for('main.show_index') }}">
+            <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- TODO add css to made dropdown appear on hover of parent button -->
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('about.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  About
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('about.show_vmc') }}">Vision, Mission, Core</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('about.show_club') }}">Club</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('community.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Community
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('community.show_youth') }}">Youth</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('community.show_news') }}">News</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('community.show_schedule') }}">Schedule</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('store.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Store
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('store.show_tickets') }}">Tickets</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('store.show_team_store') }}">Team Store</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('store.show_support') }}">Support</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('partners.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Partners
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('partners.show_local_sponsors') }}">Local Sponsors</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('partners.show_partner') }}">Become a Partner</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('partners.show_donation') }}">Make a Donation</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{ url_for('contact.show_index') }}">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="container-fluid text-center" style="background-color: var(--gufc-green); color: white;">
+        <h6 class="py-2">Our Local Sponsors</h6>
+        <!-- TODO -->
+        <!-- For each sponsor image display and scroll across screen -->
+      </div>
+    </div>
+    
   </header>
   <main role="main">
       {% block main %}{% endblock %}
   </main>
+  
+  <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 border-top">
+    <div class="col mb-3">
+      <h5><a class='text-decoration-none' href="{{ url_for('about.show_index')}}">About</a></h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="{{ url_for('about.show_vmc')}}" class="nav-link p-0 text-muted">Vision, Mission, Core</a></li>
+        <li class="nav-item mb-2"><a href="{{ url_for('about.show_team')}}" class="nav-link p-0 text-muted">Team</a></li>
+        <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 text-muted">Club</a></li>
+        <li class="nav-item mb-2"><a href="{{ url_for('about.show_players')}}" class="nav-link p-0 text-muted">Players</a></li>
+      </ul>
+    </div>
+
+    <div class="col mb-3">
+      <h5>Community</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Youth</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">News</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Schedule</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Community Outreach</a></li>
+      </ul>
+    </div>
+
+    <div class="col mb-3">
+      <h5>Store</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tickets</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Team Store</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Support</a></li>
+      </ul>
+    </div>
+
+    <div class="col mb-3">
+      <h5>Partners</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Local Sponsors</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Become a Partner</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Make a Donation</a></li>
+      </ul>
+    </div>
+    <div class="col">
+      <h5>Contact Us</h5>
+    </div>
+  </footer>
+  <script src="{{ url_for('static', filename='js/base.js') }}"></script>
   {% block js %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
