Added league route

--- a/app/about/templates/about/league.html
+++ b/app/about/templates/about/league.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block main %}
-<div class="container">
-    <h1 class="py-4"> Club.html</h1>
-    <p>About Club page</p>
-</div>
+  <div class="container">
+    <h1 class="py-4">League.html</h1>
+    <p>About league page</p>
+  </div>
 {% endblock %}
 
 {% block js %}
