--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -81,49 +81,49 @@
   <main role="main">
       {% block main %}{% endblock %}
   </main>
+  <div class="container-fluid">
+    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 p-4 border-top">
+      <div class="col mb-3">
+        <h5><a class='text-decoration-none' href="{{ url_for('about.show_index')}}">About</a></h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_vmc')}}" class="nav-link p-0 text-muted">Vision, Mission, Core</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 text-muted">League</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 text-muted">Club</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_team')}}" class="nav-link p-0 text-muted">Team</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_players')}}" class="nav-link p-0 text-muted">Players</a></li>
+        </ul>
+      </div>
   
-  <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 border-top">
-    <div class="col mb-3">
-      <h5><a class='text-decoration-none' href="{{ url_for('about.show_index')}}">About</a></h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="{{ url_for('about.show_vmc')}}" class="nav-link p-0 text-muted">Vision, Mission, Core</a></li>
-        <li class="nav-item mb-2"><a href="{{ url_for('about.show_team')}}" class="nav-link p-0 text-muted">Team</a></li>
-        <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 text-muted">Club</a></li>
-        <li class="nav-item mb-2"><a href="{{ url_for('about.show_players')}}" class="nav-link p-0 text-muted">Players</a></li>
-      </ul>
-    </div>
-
-    <div class="col mb-3">
-      <h5>Community</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Youth</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">News</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Schedule</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Community Outreach</a></li>
-      </ul>
-    </div>
-
-    <div class="col mb-3">
-      <h5>Store</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tickets</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Team Store</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Support</a></li>
-      </ul>
-    </div>
-
-    <div class="col mb-3">
-      <h5>Partners</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Local Sponsors</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Become a Partner</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Make a Donation</a></li>
-      </ul>
-    </div>
-    <div class="col">
-      <h5>Contact Us</h5>
-    </div>
-  </footer>
+      <div class="col mb-3">
+        <h5><a class='text-decoration-none' href="{{ url_for('community.show_index')}}">Community</a></h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 text-muted">Youth</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('community.show_news')}}" class="nav-link p-0 text-muted">News</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('community.show_schedule')}}" class="nav-link p-0 text-muted">Schedule</a></li>
+          <!-- <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 text-muted">Community Outreach</a></li> -->
+        </ul>
+      </div>
+  
+      <div class="col mb-3">
+        <h5><a class='text-decoration-none' href="{{ url_for('store.show_index') }}">Store</a></h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_tickets') }}" class="nav-link p-0 text-muted">Tickets</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_team_store') }}" class="nav-link p-0 text-muted">Team Store</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_support') }}" class="nav-link p-0 text-muted">Support</a></li>
+        </ul>
+      </div>
+  
+      <div class="col mb-3">
+        <h5><a class='text-decoration-none' href="{{ url_for('partners.show_index')}}">Partners</a></h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_local_sponsors')}}" class="nav-link p-0 text-muted">Local Sponsors</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_partner')}}" class="nav-link p-0 text-muted">Become a Partner</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation')}}" class="nav-link p-0 text-muted">Make a Donation</a></li>
+        </ul>
+      </div>
+    </footer>
+  </div>
+  
   <script src="{{ url_for('static', filename='js/base.js') }}"></script>
   {% block js %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
