postgres db integration

--- a/app/about/templates/about/club.html
+++ b/app/about/templates/about/club.html
@@ -1,16 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'about/base.html' %}
 
 {% block css %}
-  
+  {{ super() }}
 {% endblock %}
 
 {% block main %}
-<div class="container">
-    <h1 class="py-4"> Club.html</h1>
-    <p>About Club page</p>
-</div>
+  {{ super() }}
+
 {% endblock %}
 
 {% block js %}
-  
+  {{ super() }}
+
 {% endblock %}
