--- a/app/about/templates/about/vmc.html
+++ b/app/about/templates/about/vmc.html
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block main %}
-  
+<!-- Hero Title w/ background image -->
+<!-- Sub-nav bar -->
+<!-- Breadcrumbs object -->
+<!-- Larger Logo -->
+<!-- Body Text -->
 {% endblock %}
 
 {% block js %}
