--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,121 +11,137 @@
 </head>
 <body>
   <header>
-    <div class="conatiner-fluid">
-      <nav class="navbar navbar-expand-lg" style="background-color: var(--gufc-yellow)">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('main.show_index') }}">
-            <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- TODO add css to made dropdown appear on hover of parent button -->
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('about.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  About
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('about.show_vmc') }}">Vision, Mission, Core</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('about.show_club') }}">Club</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('community.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Community
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('community.show_youth') }}">Youth</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('community.show_news') }}">News</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('community.show_schedule') }}">Schedule</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('store.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Store
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('store.show_tickets') }}">Tickets</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('store.show_team_store') }}">Team Store</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('store.show_support') }}">Support</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('partners.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Partners
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('partners.show_local_sponsors') }}">Local Sponsors</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('partners.show_partner') }}">Become a Partner</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('partners.show_donation') }}">Make a Donation</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{{ url_for('contact.show_index') }}">Contact Us</a>
-              </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg" style="background-color: var(--gufc-yellow)">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('main.show_index') }}">
+          <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- TODO add css to made dropdown appear on hover of parent button -->
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown hoverable">
+              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('about.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                About
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('about.show_vmc') }}">Vision, Mission, Core</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('about.show_club') }}">Club</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown hoverable">
+              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('community.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Community
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('community.show_youth') }}">Youth</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('community.show_news') }}">News</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('community.show_schedule') }}">Schedule</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown hoverable">
+              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('store.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Store
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('store.show_tickets') }}">Tickets</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('store.show_team_store') }}">Team Store</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('store.show_support') }}">Support</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown hoverable">
+              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('partners.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Partners
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('partners.show_local_sponsors') }}">Local Sponsors</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('partners.show_partner') }}">Become a Partner</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('partners.show_donation') }}">Make a Donation</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="align-items-end">
+            <a href="/schedule" class="text-decoration-none">
+              Schedule
+            </a>
           </div>
         </div>
-      </nav>
-      <div class="container-fluid text-center" style="background-color: var(--gufc-green); color: white;">
-        <h6 class="py-2">Our Local Sponsors</h6>
-        <!-- TODO -->
-        <!-- For each sponsor image display and scroll across screen -->
       </div>
+    </nav>
+    <div class="container-fluid text-center" style="background-color: var(--gufc-green); color: white;">
+      <h6 class="py-2">Our Local Sponsors</h6>
+      <!-- TODO -->
+      <!-- For each sponsor image display and scroll across screen -->
     </div>
     
   </header>
   <main role="main">
       {% block main %}{% endblock %}
   </main>
-  <div class="container-fluid">
-    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 p-4 border-top">
+  <div class="justify-space-between container-fluid mb-0 py-3" style="background-color: var(--gufc-yellow);">
+    <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
+    <h6>Follow Us</h6>
+    
+  </div>
+  <div class="container-fluid mt-0" style="background-color: var(--gufc-green);">
+    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pt-4">
       <div class="col mb-3">
-        <h5><a class='text-decoration-none' href="{{ url_for('about.show_index')}}">About</a></h5>
+        <h5><a class='text-decoration-none footer-link' href="{{ url_for('about.show_index')}}">About</a></h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_vmc')}}" class="nav-link p-0 text-muted">Vision, Mission, Core</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 text-muted">League</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 text-muted">Club</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_team')}}" class="nav-link p-0 text-muted">Team</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_players')}}" class="nav-link p-0 text-muted">Players</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_vmc')}}" class="nav-link p-0 footer-link">Vision, Mission, Core</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_league')}}" class="nav-link p-0 footer-link">League</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 footer-link">Club</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_team')}}" class="nav-link p-0 footer-link">Team</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('about.show_players')}}" class="nav-link p-0 footer-link">Players</a></li>
         </ul>
       </div>
   
       <div class="col mb-3">
-        <h5><a class='text-decoration-none' href="{{ url_for('community.show_index')}}">Community</a></h5>
+        <h5><a class='text-decoration-none footer-link' href="{{ url_for('community.show_index')}}">Community</a></h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 text-muted">Youth</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('community.show_news')}}" class="nav-link p-0 text-muted">News</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('community.show_schedule')}}" class="nav-link p-0 text-muted">Schedule</a></li>
-          <!-- <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 text-muted">Community Outreach</a></li> -->
+          <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 footer-link">Youth</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('community.show_news')}}" class="nav-link p-0 footer-link">News</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('community.show_schedule')}}" class="nav-link p-0  footer-link">Schedule</a></li>
+          <!-- <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 ">Community Outreach</a></li> -->
         </ul>
       </div>
   
       <div class="col mb-3">
-        <h5><a class='text-decoration-none' href="{{ url_for('store.show_index') }}">Store</a></h5>
+        <h5><a class='text-decoration-none footer-link' href="{{ url_for('store.show_index') }}">Store</a></h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_tickets') }}" class="nav-link p-0 text-muted">Tickets</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_team_store') }}" class="nav-link p-0 text-muted">Team Store</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_support') }}" class="nav-link p-0 text-muted">Support</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_tickets') }}" class="nav-link p-0 footer-link">Tickets</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_team_store') }}" class="nav-link p-0 footer-link">Team Store</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_support') }}" class="nav-link p-0 footer-link">Support</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_terms') }}" class="nav-link p-0 footer-link">Terms & Conditions</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('store.show_pp') }}" class="nav-link p-0 footer-link">Privacy Policy</a></li>
         </ul>
       </div>
   
       <div class="col mb-3">
-        <h5><a class='text-decoration-none' href="{{ url_for('partners.show_index')}}">Partners</a></h5>
+        <h5><a class='text-decoration-none footer-link' href="{{ url_for('partners.show_index')}}">Partners</a></h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_local_sponsors')}}" class="nav-link p-0 text-muted">Local Sponsors</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_partner')}}" class="nav-link p-0 text-muted">Become a Partner</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation')}}" class="nav-link p-0 text-muted">Make a Donation</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_local_sponsors')}}" class="nav-link p-0  footer-link">Local Sponsors</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_partner')}}" class="nav-link p-0  footer-link">Become a Partner</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation')}}" class="nav-link p-0  footer-link">Make a Donation</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation_pp')}}" class="nav-link p-0  footer-link">Donation Policy</a></li>
+        </ul>
+      </div>
+      <div class="col mb-3">
+        <h5><a class='text-decoration-none footer-link' href="{{ url_for('contact.show_index')}}">Contact Us</a></h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2 p-0 "><a href="mailto:admin@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Email an Admin</a></li>
         </ul>
       </div>
     </footer>
   </div>
   
+  
   <script src="{{ url_for('static', filename='js/base.js') }}"></script>
   {% block js %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </body>
 </html>
