--- a/app/about/templates/about/index.html
+++ b/app/about/templates/about/index.html
@@ -11,7 +11,12 @@
       <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="GUFC Logo">
     </div>
     <div class="container-sm pt-3 pb-5">
-      <!-- Body Text -->
+      <p>A National Association member of the U.S. Soccer Federation, the National Association of Competitive Soccer Clubs (doing business as “US Club Soccer”) is a non-profit organization committed to the development and support of soccer clubs in the United States. Among US Club Soccer's guiding principles:</p>
+      <ul>
+        <li></li>
+      </ul>
+      <p></p>
+      <p></p>
     </div>
   </div>
 {% endblock %}
