--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,8 @@
   {% block css %}{% endblock %}
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--gufc-yellow)">
+  <header class="py-2 shadow-sm" style="background-color: var(--gufc-yellow)">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ url_for('main.show_index') }}">
           <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
@@ -64,81 +64,73 @@
             </li>
           </ul>
           <div class="align-items-end">
-            <a href="/schedule" class="text-decoration-none">
+            <a href="{{ url_for('community.show_schedule') }}" class="text-decoration-none">
               Schedule
             </a>
           </div>
         </div>
       </div>
     </nav>
-    <div class="container-fluid text-center" style="background-color: var(--gufc-green); color: white;">
+    <!-- <div class="container-fluid text-center" style="background-color: var(--gufc-green); color: white;">
       <h6 class="py-2">Our Local Sponsors</h6>
-      <!-- TODO -->
-      <!-- For each sponsor image display and scroll across screen -->
-    </div>
+    </div> -->
     
   </header>
-  <main role="main">
-      {% block main %}{% endblock %}
+  <main role="main" class="pt-3 pb-5">
+    {% block main %}{% endblock %}
   </main>
-  <div class="justify-space-between container-fluid mb-0 py-3" style="background-color: var(--gufc-yellow);">
-    <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
-    <h6>Follow Us</h6>
-    
-  </div>
-  <div class="container-fluid mt-0" style="background-color: var(--gufc-green);">
-    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pt-4">
-      <div class="col mb-3">
-        <h5><a class='text-decoration-none footer-link' href="{{ url_for('about.show_index')}}">About</a></h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_vmc')}}" class="nav-link p-0 footer-link">Vision, Mission, Core</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_league')}}" class="nav-link p-0 footer-link">League</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 footer-link">Club</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_team')}}" class="nav-link p-0 footer-link">Team</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_players')}}" class="nav-link p-0 footer-link">Players</a></li>
+  <footer style="background-color: var(--gufc-green); color: white;">
+    <div class="container-md">
+      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my- px-md-1 px-4">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+            <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="75px" class="rounded foot-logo">
+          </a>
+        </div>
+        <ul class="col-md-4 justify-content-end list-unstyled d-flex align-items-center">
+          <li class="ms-3">
+            <a class="text-muted" href="https://twitter.com/GreenvilleUtd" target="_blank">
+              <img src="{{ url_for('static', filename='img/twitter.svg') }}" alt="Twitter Icon" class="rounded brand-ico" height="28em">
+            </a>
+          </li>
+          <li class="ms-3">
+            <a class="text-muted" href="https://www.facebook.com/greenvilleutd" target="_blank">
+              <img src="{{ url_for('static', filename='img/facebook-f.svg') }}" alt="Facebook Icon" class="rounded brand-ico" height="28em">
+            </a>
+          </li>
+          <li class="ms-3">
+            <a class="text-muted" href="https://www.instagram.com/greenvilleunited/" target="_blank">
+              <img src="{{ url_for('static', filename='img/instagram.svg') }}" alt="Instagram Icon" class="rounded brand-ico" height="28em">
+            </a>
+          </li>
         </ul>
       </div>
-  
-      <div class="col mb-3">
-        <h5><a class='text-decoration-none footer-link' href="{{ url_for('community.show_index')}}">Community</a></h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 footer-link">Youth</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('community.show_news')}}" class="nav-link p-0 footer-link">News</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('community.show_schedule')}}" class="nav-link p-0  footer-link">Schedule</a></li>
-          <!-- <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 ">Community Outreach</a></li> -->
-        </ul>
+      <div class="container-fluid text-center">
+        <div class="row justify-content-start ps-2">
+          <ul class="nav col-md-6 align-middle py-4">
+            <li class="nav-item">© 2022 Greenville United Football Club.</li>
+          </ul>
+          <ul class="nav col-md-6 justify-content-end align-middle py-4">
+            <li class="nav-item">
+              <a href="{{ url_for('store.show_pp') }}" class="nav-link align-middle footer-link px-2">Privacy Policy</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('store.show_terms') }}" class="nav-link align-middle footer-link px-2">Terms and Conditions</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('partners.show_donation_pp') }}" class="nav-link align-middle footer-link px-2">Donation Policy</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('main.show_site_map') }}" class="nav-link align-middle footer-link px-2">Site Map</a>
+            </li>
+            <li class="nav-item">
+              <a href="mailto:admin@greenvilleutd.com" class="nav-link align-middle footer-link px-2">Contact Us</a>
+            </li>
+          </ul>
+        </div>
       </div>
-  
-      <div class="col mb-3">
-        <h5><a class='text-decoration-none footer-link' href="{{ url_for('store.show_index') }}">Store</a></h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_tickets') }}" class="nav-link p-0 footer-link">Tickets</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_team_store') }}" class="nav-link p-0 footer-link">Team Store</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_support') }}" class="nav-link p-0 footer-link">Support</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_terms') }}" class="nav-link p-0 footer-link">Terms & Conditions</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('store.show_pp') }}" class="nav-link p-0 footer-link">Privacy Policy</a></li>
-        </ul>
-      </div>
-  
-      <div class="col mb-3">
-        <h5><a class='text-decoration-none footer-link' href="{{ url_for('partners.show_index')}}">Partners</a></h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_local_sponsors')}}" class="nav-link p-0  footer-link">Local Sponsors</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_partner')}}" class="nav-link p-0  footer-link">Become a Partner</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation')}}" class="nav-link p-0  footer-link">Make a Donation</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation_pp')}}" class="nav-link p-0  footer-link">Donation Policy</a></li>
-        </ul>
-      </div>
-      <div class="col mb-3">
-        <h5><a class='text-decoration-none footer-link' href="{{ url_for('contact.show_index')}}">Contact Us</a></h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2 p-0 "><a href="mailto:admin@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Email an Admin</a></li>
-        </ul>
-      </div>
-    </footer>
-  </div>
-  
-  
+    </div>
+  </footer>
   <script src="{{ url_for('static', filename='js/base.js') }}"></script>
   {% block js %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
