--- a/app/templates/under-construction.html
+++ b/app/templates/under-construction.html
@@ -8,8 +8,13 @@
 <div class="container py-4" id="main-contain">
     <div class="container-sm">
         <h1 class="text-center py-2">Under Construction</h1>
-        <h3 class="py-2">Pardon our interruption while we continue to improve our website!</h3>
-        <p class="pt-2 pb-5 text-muted">Thank you for visiting our page. We are currently working to improve the accessibility and user experience of our website. If you have any questions or need assistance, please do not hesitate to <a class="text-decoration-none" href="mailto:admin@greenvilleutd.com">contact us</a>.</p>
+        <div class="container text-center">
+          <img class="py-5 mx-auto" src="{{ url_for('static', filename='img/under-construction.svg') }}" alt="Under Construction" height='550rem'>
+        </div>
+        <h3 class="py-2 text-center">Pardon our interruption while we continue to improve our website!</h3>
+        <div class="container-sm">
+          <p class="pt-2 pb-5 text-muted">Thank you for visiting our page. We are currently working to improve the accessibility and user experience of our website. If you have any questions or need assistance, please do not hesitate to <a class="text-decoration-none" href="mailto:admin@greenvilleutd.com">contact us</a>.</p>
+        </div>
     </div>
     <div class="container-sm">
         <div class="card text-center p-3" id="newsletter">
