--- a/app/about/templates/about/base.html
+++ b/app/about/templates/about/base.html
@@ -35,8 +35,13 @@
         </div>
     </div>
     <!-- Breadcrumbs object -->
-    
-    <!-- Larger Logo -->
+    <nav aria-label="breadcrumb" class="py-3">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="{{ url_for('about.show_index') }}">About</a></li>
+          <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
+        </ol>
+    </nav>
+
 {% endblock %}
 
 {% block js %}
