--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,5 @@
+{% from "./macros.html" import nav_link with context %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +12,17 @@
   {% block css %}{% endblock %}
 </head>
 <body>
+  <div class="container-fluid text-center py-3" style="background-color: var(--gufc-green);">
+    <a class="social-nav text-decoration-none" href="https://twitter.com/GreenvilleUtd" target="_blank">
+      <img src="{{ url_for('static', filename='img/twitter.svg') }}" alt="Twitter Icon" class="rounded brand-ico" height="20em">
+    </a>
+    <a class="social-nav mx-4 text-decoration-none" href="https://www.facebook.com/greenvilleutd" target="_blank">
+      <img src="{{ url_for('static', filename='img/facebook-f.svg') }}" alt="Facebook Icon" class="rounded brand-ico" height="20em">
+    </a>
+    <a class="social-nav text-decoration-none" href="https://www.instagram.com/greenvilleunited/" target="_blank">
+      <img src="{{ url_for('static', filename='img/instagram.svg') }}" alt="Instagram Icon" class="rounded brand-ico" height="20em">
+    </a>
+  </div>
   <header class="py-2 shadow-sm" style="background-color: var(--gufc-yellow)">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -28,8 +41,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{{ url_for('about.show_vmc') }}">Vision, Mission, Core</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('about.show_league') }}">League</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('about.show_club') }}">Club</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('about.show_players') }}">Players</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown hoverable">
@@ -62,78 +77,104 @@
                 <li><a class="dropdown-item" href="{{ url_for('partners.show_donation') }}">Make a Donation</a></li>
               </ul>
             </li>
+            <li class="nav-item dropdown hoverable">
+              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('partners.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Contact Us
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="mailto:admin@greenvilleutd.com">Website Support</a></li>
+                <li><a class="dropdown-item" href="mailto:store@greenvilleutd.com">Merchandise Support</a></li>
+                <li><a class="dropdown-item" href="mailto:club@greenvilleutd.com">Club Support</a></li>
+              </ul>
+            </li>
           </ul>
-          <div class="align-items-end">
+          <div class="ms-auto">
             <a href="{{ url_for('community.show_schedule') }}" class="text-decoration-none">
-              Schedule
+              <div class="container schedule-btn">
+                <div class="col">
+                  <div class="row">
+                    {{ match_date }}
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      {% if home %}
+                      <h1>vs</h1>
+                      {% else %}
+                      <h1>@</h1>
+                      {% endif %}
+                    </div>
+                    <div class="col">
+                      <p>{{ opponent }}</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <img src="{{ img_src }}" alt="{{ img_title }}">
+                </div>
+              </div>
             </a>
           </div>
         </div>
       </div>
     </nav>
-    <!-- <div class="container-fluid text-center" style="background-color: var(--gufc-green); color: white;">
-      <h6 class="py-2">Our Local Sponsors</h6>
-    </div> -->
-    
   </header>
-  <main role="main" class="pt-3 pb-5">
+  <main role="main" class="pt-3 pb-5" style="min-height: 80vh;">
     {% block main %}{% endblock %}
   </main>
   <footer style="background-color: var(--gufc-green); color: white;">
-    <div class="container-md">
-      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my- px-md-1 px-4">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-            <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="75px" class="rounded foot-logo">
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-3 mx-3 px-md-1 px-4">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+          <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="75px" class="rounded foot-logo">
+        </a>
+      </div>
+      <ul class="col-md-4 justify-content-end list-unstyled d-flex align-items-center">
+        <li class="ms-3">
+          <a class="text-muted" href="https://twitter.com/GreenvilleUtd" target="_blank">
+            <img src="{{ url_for('static', filename='img/twitter.svg') }}" alt="Twitter Icon" class="rounded brand-ico" height="28em">
           </a>
-        </div>
-        <ul class="col-md-4 justify-content-end list-unstyled d-flex align-items-center">
-          <li class="ms-3">
-            <a class="text-muted" href="https://twitter.com/GreenvilleUtd" target="_blank">
-              <img src="{{ url_for('static', filename='img/twitter.svg') }}" alt="Twitter Icon" class="rounded brand-ico" height="28em">
-            </a>
+        </li>
+        <li class="ms-3">
+          <a class="text-muted" href="https://www.facebook.com/greenvilleutd" target="_blank">
+            <img src="{{ url_for('static', filename='img/facebook-f.svg') }}" alt="Facebook Icon" class="rounded brand-ico" height="28em">
+          </a>
+        </li>
+        <li class="ms-3">
+          <a class="text-muted" href="https://www.instagram.com/greenvilleunited/" target="_blank">
+            <img src="{{ url_for('static', filename='img/instagram.svg') }}" alt="Instagram Icon" class="rounded brand-ico" height="28em">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="container-fluid text-center">
+      <div class="row justify-content-start ps-2">
+        <ul class="nav col-md-6 align-middle py-4">
+          <li class="nav-item">© 2022 Greenville United Football Club.</li>
+        </ul>
+        <ul class="nav col-md-6 justify-content-end align-middle py-4">
+          <li class="nav-item">
+            <a href="{{ url_for('store.show_pp') }}" class="nav-link align-middle footer-link px-2">Privacy Policy</a>
           </li>
-          <li class="ms-3">
-            <a class="text-muted" href="https://www.facebook.com/greenvilleutd" target="_blank">
-              <img src="{{ url_for('static', filename='img/facebook-f.svg') }}" alt="Facebook Icon" class="rounded brand-ico" height="28em">
-            </a>
+          <li class="nav-item">
+            <a href="{{ url_for('store.show_terms') }}" class="nav-link align-middle footer-link px-2">Terms and Conditions</a>
           </li>
-          <li class="ms-3">
-            <a class="text-muted" href="https://www.instagram.com/greenvilleunited/" target="_blank">
-              <img src="{{ url_for('static', filename='img/instagram.svg') }}" alt="Instagram Icon" class="rounded brand-ico" height="28em">
-            </a>
+          <li class="nav-item">
+            <a href="{{ url_for('partners.show_donation_pp') }}" class="nav-link align-middle footer-link px-2">Donation Policy</a>
+          </li>
+          <li class="nav-item">
+            <a href="{{ url_for('main.show_site_map') }}" class="nav-link align-middle footer-link px-2">Site Map</a>
+          </li>
+          <li class="nav-item">
+            <a href="mailto:admin@greenvilleutd.com" class="nav-link align-middle footer-link px-2">Contact Us</a>
           </li>
         </ul>
-      </div>
-      <div class="container-fluid text-center">
-        <div class="row justify-content-start ps-2">
-          <ul class="nav col-md-6 align-middle py-4">
-            <li class="nav-item">© 2022 Greenville United Football Club.</li>
-          </ul>
-          <ul class="nav col-md-6 justify-content-end align-middle py-4">
-            <li class="nav-item">
-              <a href="{{ url_for('store.show_pp') }}" class="nav-link align-middle footer-link px-2">Privacy Policy</a>
-            </li>
-            <li class="nav-item">
-              <a href="{{ url_for('store.show_terms') }}" class="nav-link align-middle footer-link px-2">Terms and Conditions</a>
-            </li>
-            <li class="nav-item">
-              <a href="{{ url_for('partners.show_donation_pp') }}" class="nav-link align-middle footer-link px-2">Donation Policy</a>
-            </li>
-            <li class="nav-item">
-              <a href="{{ url_for('main.show_site_map') }}" class="nav-link align-middle footer-link px-2">Site Map</a>
-            </li>
-            <li class="nav-item">
-              <a href="mailto:admin@greenvilleutd.com" class="nav-link align-middle footer-link px-2">Contact Us</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </footer>
   <script src="{{ url_for('static', filename='js/base.js') }}"></script>
   {% block js %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
   <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </body>
 </html>
