--- a/app/templates/site-map.html
+++ b/app/templates/site-map.html
@@ -46,7 +46,9 @@
       <div class="col mb-3">
         <h5><a class='text-decoration-none footer-link' href="{{ url_for('contact.show_index')}}">Contact Us</a></h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2 p-0 "><a href="mailto:admin@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Email an Admin</a></li>
+          <li class="nav-item mb-2 p-0 "><a href="mailto:admin@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Website Support</a></li>
+          <li class="nav-item mb-2 p-0 "><a href="mailto:store@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Merchandise Support</a></li>
+          <li class="nav-item mb-2 p-0 "><a href="mailto:club@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Club Support</a></li>
         </ul>
       </div>
     </footer>
